--- a/styles/style.css
+++ b/styles/style.css
@@ -1,6 +1,13 @@
 html,
 body {
     background-color: aquamarine;
+    text-align: center;
+}
+
+h1 {
+    font-size: 30px;
+    font-weight: 600;
+    padding: 10px;
 }
 
 .cell {
@@ -11,12 +18,13 @@ body {
 }
 
 #board {
+    margin: 0 auto;
     width: 760px;
 }
 
 .piece {
-    width: 50px;
-    height: 50px;
+    width: 90px;
+    height: 90px;
     border-radius: 100%;
     background-color: red;
 }
